# hackathon-image-classification

./: README.md  app.py  app_test.py  download_image.py  from_webp_to_jpg.py  pyproject.toml
model_downloaded/: MLmodel  conda.yaml  requirements.txt
model_downloaded/data/model/variables/: variables.index
model_downloaded/model/: MLmodel  conda.yaml  requirements.txt
model_downloaded/model/data/model/variables/: variables.index
