[tool.poetry]
name = "hackathon-image-classification-app"
version = "0.1.0"
description = "Streamlit app to classify real estate rooms"
authors = ["Jorge Castro <nikey_es@yahoo.es>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
tensorflow = "2.3.0"
efficientnet = "^1.1.1"
numpy = ">=1.16.0,<1.19.0"
streamlit = "^1.7.0"
mlflow = "^1.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
